# python-ci-template

./: .buildinfo  .gitattributes  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  README.md  __init__.py  app.py  genindex.html  index.html  objects.inv  publish_date.txt  py-modindex.html  search.html  searchindex.js  setup.cfg  setup.cfg.tmpl  setup.py
.github/workflows/: continous-delivery.yml  continous-integration.yml  github-page-build-and-deploy.yml
_sources/: index.rst.txt
_sources/api/: TEMPLATE.rst.txt  modules.rst.txt
_sources/intro/: readme.rst.txt
_sources/userguide/: index.rst.txt
api/: TEMPLATE.html  modules.html
confs/: .pre-commit-config.yaml
intro/: readme.html
requirements/: requirements.in  requirements.txt  requirements_ci.in  requirements_ci.txt  requirements_dev.in  requirements_dev.txt
sphinx/source/: conf.py
sphinx/source/api/: modules.rst
src/: __init__.py  _version.py
templates/: Dockerfile.tmpl  Makefile.tmpl  PyPI-release.yml.tmpl  TestPyPI-release.yml.tmpl  continous-delivery.yml.tmpl  continous-integration.yml.tmpl  setup.cfg.tmpl
templates/3.6/: requirements.in  requirements_ci.in
templates/3.7/: requirements_ci.in
templates/3.8/: requirements_ci.in
templates/3.9/: requirements_ci.in
tests/: test_.py
userguide/: index.html
version/: _version.py
