[versioneer]
VCS = git
style = pep440
versionfile_source = version/_version.py
versionfile_build = version/_version.py
tag_prefix =
parentdir_prefix = python-ci-template

[tool:pytest]
addopts = --doctest-modules --cov=./tests

[flake8]
exclude = __init__.py,versioneer.py,_version.py
max-line-length = 120

[metadata]
name = python-ci-template
url = https://github.com/CGnal/python-ci-template
author = Nicola Romeo Arena
author_email = nromeoarena@cgnal.com
description = A template project to be used for any Python project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE


[option]
package_dir=
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

