[versioneer]
VCS = git
style = pep440
versionfile_source = src/_version.py
versionfile_build = src/_version.py
tag_prefix =
parentdir_prefix = python-ci-template

[tool:pytest]
addopts = --doctest-modules --cov=./src

[flake8]
exclude = __init__.py,versioneer.py,src/_version.py
ignore =
    # Ignored by black
    E203, E266, E501, W503,
    # Ignored to conform to PEP257
    D203, D212, D213, D214, D215, D404, D405, D406, D407, D408, D409, D410, D411, D413, D415, D416, D417,
    # Ignored to work with Sphinx
    RST303, RST304, RST307

# line length is intentionally set to 80 here because black uses Bugbear
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
max-line-length = 80

max-complexity = 18
select = B,C,D,E,F,W,T4,B9,RST

[mypy]

[mypy-numpy.*]
# can be removed if numpy 1.20+ (typing annotations available from this version on)
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-sklearn.*]
ignore_missing_imports = True

[mypy-seaborn.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[metadata]
name = python-ci-template
url = https://github.com/CGnal/python-ci-template
author = CGnal s.r.l.
author_email = info@cgnal.com
description = template python project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
license_files = LICENSE

[option]
package_dir=
    =src
packages = find:
python_requires = ==3.6

[options.packages.find]
where = src
